--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: libcaesium_dart
-description: "A new Flutter FFI plugin project."
+description: "A Flutter FFI plugin for libcaesium, a powerful image compression library written in Rust."
 version: 0.0.1
-homepage:
+homepage: https://github.com/foamify/libcaesium_dart
 
 environment:
   sdk: ^3.5.3
